<resources>

    <string name="app_name">Pawn Stars Chess</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="begin_game">Begin Game</string>
    <string name="name_label">Name:</string>
    <string name="server_ip_code">Server\'s IP Code:</string>
    <string name="remove_player">Remove Player</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="guest">Guest</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string><string name="start_the_game">Start Game!</string>
    
    <string name="dialog_continue_label">Continue Playing Game</string>
    <string name="dialog_quit_label">Quit</string>
    <string name="dialog_quit_question">Do you really want to quit?</string>
    <string name="local_tab">Local Game</string>
    <string name="remote_tab">Remote Game</string>
    <string name="action_settings">Settings</string>
    <string name="resign">Resign</string>
    <string name="flipBoardBut">Flip</string>
    <string name="draw">Draw</string>
    <string name="undo">Undo</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="score">Score</string>
    <string name="randomNumber">42</string>
    <string name="dialog_color_question">Do you want to start as white or black?</string>
    <string name="dialog_white_label">White</string>
    <string name="dialog_black_label">Black</string>
    <string name="dialog_title">Pick a color</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="backgroundDescription">A wooden desk</string>
</resources>