<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_gui_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/edu.up.cs301.game">

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </android.support.v7.widget.GridLayout>

    <ImageView
        android:id="@+id/woodBackgroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backgroundDescription"
        android:scaleType="fitXY"
        android:src="@drawable/cherrywooddesk" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_weight="1"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <edu.up.cs301.chess.ChessBoard
        android:id="@+id/gameBoardSurfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/LinearLayout2"
        android:background="@color/background_color"
        android:paddingBottom="0dp"
        android:paddingLeft="200dp"
        android:paddingTop="25dp" />

    

        

    

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:orientation="horizontal"
        android:weightSum="11.5" >
        
			<TextView
            android:id="@+id/player1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
			
        <TextView
            android:id="@+id/turnTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/randomNumber"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/drawButton"
            style="@style/importantButton"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/buttonshape"
            android:text="@string/draw" />

        <Button
            android:id="@+id/flipBoardButton"
            style="@style/importantButton"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/buttonshape"
            android:text="@string/flipBoardBut" />

        <Button
            android:id="@+id/resignButton"
            style="@style/importantButton"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/buttonshape"
            android:text="@string/resign" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scoreTextView" >

        <TextView
            android:id="@+id/player1ScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/randomNumber"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/player2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/player2ScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/randomNumber"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>